# nodist

./: .gitignore  Makefile  README.md  answer  pyproject.toml
app/: __init__.py  cli.py  config.py  judge.py  progress.py  registry.py  validate.py
docs/: architecture.md  curriculum.md  level-spec.md  roadmap.md
levels/level_00/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_01/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_02/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_03/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_04/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_05/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_06/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_07/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_08/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_09/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_10/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_11/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
levels/level_12/: explanation_ja.md  meta.json  task.md  task_ja.md  template.c  tests.json
src/: judge.py
submissions/: max_value.c
(+23 files in other folders)
