[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nodist"
version = "0.1.0"
description = "Local CLI exercises for C algorithms and data structures."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
nodist = "app.cli:main"

[tool.setuptools]
packages = ["app"]
